list posts: replaced request body with query param
